tests/snapshots/test_redaction__user_json_settings.snap
---
created: "2019-08-23T20:50:31.800965Z"
creator: insta@0.10.1
source: tests/test_redaction.rs
expression: "&User{id: Uuid::new_v4(),\n      username: \"jason_doe\".to_string(),\n      email: Email(\"jason@example.com\".to_string()),\n      extra: \"ssn goes here\".to_string(),}"
---
{
  "id": "[uuid]",
  "username": "jason_doe",
  "email": "jason@example.com",
  "extra": "[extra]"
}
