tests/snapshots/test_redaction__user_ron.snap
---
created: "2019-02-01T13:47:54.698182Z"
creator: insta@0.6.0
source: tests/test_redaction.rs
expression: "&User{id: Uuid::new_v4(),\n      username: \"john_ron\".to_string(),\n      email: Email(\"john@example.com\".to_string()),\n      extra: \"\".to_string(),}"
---
User(
  id: "[uuid]",
  username: "john_ron",
  email: Email("john@example.com"),
  extra: "",
)
